@@ -71,7 +71,11 @@ class herdstat_va_base_E                : public herdstat_msg_base_E
 
         herdstat_va_base_E(const util::string &msg, ...)
         {
+#ifdef HAVE_GCC4
+            va_start(v, msg);
+#else
             va_start(v, msg.c_str());
+#endif /* HAVE_GCC4 */
             str = util::sprintf(msg.c_str(), v).c_str();
             va_end(v);
         }
