@@ -4,6 +4,9 @@ ChangeLog file for a more detailed listing of changes/bug fixes.
 1.1.0_rc6:
     Moved EXAMPLES section of manual page to it's own file, doc/examples.txt.
 
+    Bug fixes:
+     - Fixed broken 'herdstat -m' inside package directories.
+
 1.1.0_rc5:
     New features:
      - Action handlers that involve searching portage now respect --timer so
